force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/docutizexa__D3WorkerExecutionHistory__c.object-meta.xml
<CustomObject>
    <label>Linkage History</label>
    <nameField>
        <displayFormat>D3H-{0000000000}</displayFormat>
        <label>Linkage History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linkage Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>