force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__D3WorkerErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerErrorMessage__c</fullName>
    <label>Error Message (External)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>