force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__D3WorkerRequestParameter__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__D3WorkerRequestParameter__c</fullName>
    <label>Linkage Entity</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>