force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__deliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__deliveryDestination__c</fullName>
    <label>Delivery Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>