force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__deliveryServiceId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__deliveryServiceId__c</fullName>
    <label>Delivery Service Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>