force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__deliveryServiceName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__deliveryServiceName__c</fullName>
    <label>Delivery Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>