force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__documentName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__documentName__c</fullName>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>