force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__EnvelopeCount__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EnvelopeCount__c</fullName>
    <label>Envelope Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>