force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>