force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__ExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ExecutionDate__c</fullName>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>