force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__ExecutionUser__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__ExecutionUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>D3Worker_Execution_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>