force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__HistoryUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__HistoryUpdateDate__c</fullName>
    <label>Hisotry Update Date</label>
    <type>DateTime</type>
</CustomField>