force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__JobExecuteUID__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__JobExecuteUID__c</fullName>
    <label>User (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>