force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__JobId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__JobId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Job ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>