force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__Report__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report</label>
    <referenceTo>docutizexa__Report__c</referenceTo>
    <relationshipLabel>Linkage Histories</relationshipLabel>
    <relationshipName>LinkageHistories</relationshipName>
    <type>Lookup</type>
</CustomField>