force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__RequestFromId__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__RequestFromId__c</fullName>
    <label>連携元ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>