force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/fields/docutizexa__WorkName__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__WorkName__c</fullName>
    <label>Work Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>