force-app/main/default/objects/docutizexa__D3WorkerExecutionHistory__c/listViews/docutizexa__All.listView-meta.xml
<ListView>
    <fullName>docutizexa__All</fullName>
    <columns>NAME</columns>
    <columns>docutizexa__Status__c</columns>
    <columns>docutizexa__D3WorkerErrorMessage__c</columns>
    <columns>docutizexa__JobId__c</columns>
    <columns>docutizexa__WorkName__c</columns>
    <columns>docutizexa__ExecutionDate__c</columns>
    <columns>docutizexa__ExecutionUser__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>